--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <!-- Links to css files-->
         <!-- <link rel="stylesheet" type='text/css' href="css/framework.css"> -->
         
-        <link rel="stylesheet" type='text/css' href="css/style.css">
-        <link rel="stylesheet" type='text/css' href="css/bootstrap.min.css">
+        <link rel="stylesheet" type='text/css' href="css/final.min.css">
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 
     </head> 
@@ -161,9 +160,7 @@
 <!--end of modals-->
             
     </div>
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/final.min.js"></script>
 
     </body>
 </html>
